--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="row align-items-center cardsRow">
     
                     <div class="col contentCard">
-                        <a style="text-decoration:none" href="https://discord.com/invite/sdKV4rzwuh" target="_blank">
+                        <a style="text-decoration:none" href="https://discord.com/invite/UxQtp5JpgA" target="_blank">
                             <div class="card-custom zoom">
                                 <img class="imgcard discord zoom" src="/img/Discordlogo.png" alt="Discord orizonMC">
                                 <div class="card-body">
@@ -69,11 +69,11 @@
                         </a>
                     </div>
                     <div class="col contentCard">
-                        <a style="text-decoration:none" href="https://twitter.com/orizonMCNet" target="_blank">
+                        <a style="text-decoration:none" href="https://instagram.com/orizonnt" target="_blank">
                             <div class="card-custom zoom">
-                                <img class="imgcard twitter zoom" src="/img/twitter.png" alt="Twitter orizonMC">
+                                <img class="imgcard twitter zoom" src="/img/insta.png" alt="Instagram orizonMC">
                                 <div class="card-body">
-                                    <h5 class="card-title text">TWITTER</h5>
+                                    <h5 class="card-title text">INSTAGRAM</h5>
                                 </div>
                             </div>
                         </a>
